--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>websites</groupId>
-  <artifactId>MavenJava</artifactId>
+  <artifactId>MavenWeb</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>MavenJava</name>
+  <name>MavenWeb</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
   
